fixed the documentation
