# handlers/group-delete.go
@@ -15,11 +15,14 @@ import (
 // Deletes a group
 // responses:
 //	201: noContent
+//  401: unauthorizedResponse
+//  400: badRequestResponse
 
 //DeleteGroup removes a group from the database
 func DeleteGroup(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("content-type", "application/json")
 
+	// validate the jwt token
 	id, err := security.ValidateToken(w, r)
 	if err != nil {
 		w.WriteHeader(http.StatusUnauthorized)
@@ -27,29 +30,32 @@ func DeleteGroup(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	fmt.Println(id)
+	//check if the user is authorized for this request
 	if id != os.Getenv("ADMIN_ID") {
 		w.WriteHeader(http.StatusUnauthorized)
-		http.Error(w, "User not authorized", http.StatusBadRequest)
+		http.Error(w, "User not authorized", http.StatusUnauthorized)
 		return
 	}
 
 	params := mux.Vars(r)
 	var group data.Group
 
+	//check if the group exists
 	foundGroup := data.DB.First(&group, params["id"])
 	if foundGroup.Error != nil {
 		http.Error(w, "Group not found", http.StatusBadRequest)
 		return
 	}
 
+	//delete the group
 	deletedGroup := data.DB.Delete(&group)
 	if deletedGroup.Error != nil {
 		http.Error(w, "Could not delete group", http.StatusInternalServerError)
 		return
 	}
 
+	//update all the users in this group that there group has been deleted
 	data.DB.Model(&data.Person{}).Where("group_name = ?", group.Name).Update("group_name", group.Name+"-deleted")
 
-	json.NewEncoder(w).Encode(&group)
+	json.NewEncoder(w).Encode(fmt.Sprintf("Group %v was successfully deleted", group.Name))
 }
