# handlers/login.go
@@ -9,8 +9,17 @@ import (
 	"github.com/matejelenc/rest-api/security"
 )
 
+// swagger:route POST /login users loginUser
+// Login a user
+//
+// responses:
+//	201: noContent
+//  400: badRequestResponse
+
+//Login verifies a user
 func Login(w http.ResponseWriter, r *http.Request) {
 
+	//deserialize email and password
 	var input map[string]string
 	err := json.NewDecoder(r.Body).Decode(&input)
 	if err != nil {
@@ -19,6 +28,7 @@ func Login(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	//check if the user is exists
 	var user data.Person
 	foundEmail := data.DB.First(&user, "Email = ?", input["email"])
 	if foundEmail.Error != nil {
@@ -26,12 +36,14 @@ func Login(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	//verify the password
 	err = security.VerifyPassword(user.Password, input["password"])
 	if err != nil {
 		http.Error(w, "Incorrect passord", http.StatusBadRequest)
 		return
 	}
 
+	//generate a jwt token for this user
 	tokenString, err := security.GenerateJWT(&user)
 	if err != nil {
 
@@ -39,8 +51,9 @@ func Login(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	expirationTime := time.Now().Add(time.Minute * 30)
+	expirationTime := time.Now().Add(time.Hour * 24)
 
+	//save the jwt token in a cookie
 	cookie := &http.Cookie{
 		Name:     "Token",
 		Value:    tokenString,
@@ -48,5 +61,7 @@ func Login(w http.ResponseWriter, r *http.Request) {
 		HttpOnly: true,
 	}
 
+	//set the cookie
 	http.SetCookie(w, cookie)
+	json.NewEncoder(w).Encode("Successfully logged in")
 }
