# handlers/user-update.go
@@ -10,13 +10,13 @@ import (
 	"github.com/matejelenc/rest-api/security"
 )
 
-// swagger:route PUT/users/{id} users updateUser
+// swagger:route PATCH/users/{id} users updateUser
 // Update a user
 //
 // responses:
-//	201: noContentResponse
-//  404: errorResponse
-//  422: errorValidation
+//	200: userResponse
+//  401: unauthorizedResponse
+//  400: badRequestResponse
 
 //UpdateUser updates a user with requests context
 func UpdatePerson(w http.ResponseWriter, r *http.Request) {
@@ -26,6 +26,7 @@ func UpdatePerson(w http.ResponseWriter, r *http.Request) {
 	var person data.Person
 	var group data.Group
 
+	//validate the jwt token
 	id, err := security.ValidateToken(w, r)
 	if err != nil {
 		w.WriteHeader(http.StatusUnauthorized)
@@ -33,6 +34,7 @@ func UpdatePerson(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	//check if the user is authorized for this request
 	if id != params["id"] {
 		if id != os.Getenv("ADMIN_ID") {
 			w.WriteHeader(http.StatusUnauthorized)
@@ -41,6 +43,7 @@ func UpdatePerson(w http.ResponseWriter, r *http.Request) {
 		}
 	}
 
+	//get the user
 	foundPerson := data.DB.First(&person, params["id"])
 	if foundPerson.Error != nil {
 		http.Error(w, "User not found", http.StatusBadRequest)
@@ -49,6 +52,7 @@ func UpdatePerson(w http.ResponseWriter, r *http.Request) {
 
 	upPerson := r.Context().Value(security.KeyUpdateUser{}).(data.Person)
 
+	//check if the users group exists
 	if upPerson.GroupName != "" {
 		foundGroup := data.DB.First(&group, "Name = ?", upPerson.GroupName)
 		if foundGroup.Error != nil {
@@ -57,6 +61,7 @@ func UpdatePerson(w http.ResponseWriter, r *http.Request) {
 		}
 	}
 
+	//update the user
 	updatedPerson := data.DB.Model(&person).Updates(upPerson)
 	if updatedPerson.Error != nil {
 		http.Error(w, "Could not update user", http.StatusInternalServerError)
